# trial-streamlit-deployment

./: .python-version  README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
trial_streamlit_deployment/: Homepage.py
trial_streamlit_deployment/utils/: database.py
