[tool.poetry]
name = "my_streamlit_app"
version = "0.1.0"
description = "A simple Streamlit app to view products from a MySQL database"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.10.0"
mysql-connector-python = "^8.0.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
